--- a/package.json
+++ b/package.json
@@ -8,28 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/native": "^5.7.3 ",
     "@react-navigation/stack": "^5.9.0",
-    "expo": "~40.0.0",
-    "expo-status-bar": "~1.0.3",
+    "expo": "^40.0.0",
+    "expo-app-auth": "^9.3.0",
+    "expo-av": "~8.2.1",
+    "expo-google-sign-in": "^8.4.0",
+    "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-elements": "^3.0.1",
-    "react-native-gesture-handler": "1.9.0",
-    "react-native-screens": "^2.16.1",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "0.63",
+    "react-native-elements": "^2.2.1",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
+    "@babel/core": "^7.8.6",
+    "@types/react": "~16.9.41",
     "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "typescript": "~3.9.5"
   },
   "private": true
 }
